--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <Link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Titulo del post</h1>
-    <p>Esta es una nueva prueba</p>
+<div id="container">
+    <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+    </div>
+</div>
 </body>
 </html>
