--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>El titulo del post</title>
+    <title>Bienvenidos a Hyperblog 2.0</title>
     <Link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
