--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="container">
     <div id="header">
+        <img id="logo" src="images/dragon.png" />
         Hyperblog
         <span id="tagline">Tu blog de cabecera</span>
     </div>
